--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "pyyaml>=6.0.3",
     "rich>=14.2.0",
     "structlog>=25.4.0",
+    "typer>=0.20.0",
     "whenever>=0.9.3",
 ]
 
